--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-json-view": "^1.19.1",
